--- a/drivers/staging/prima/Kbuild
+++ b/drivers/staging/prima/Kbuild
@@ -20,10 +20,10 @@ CONFIG_PRIMA_WLAN_BTAMP := n
 CONFIG_PRIMA_WLAN_LFR := y
 
 # Flag to enable SAE
-CONFIG_WLAN_FEATURE_SAE := y
+CONFIG_WLAN_FEATURE_SAE := n
 
 # Flag to enable OWE
-CONFIG_WLAN_AKM_SUITE_OWE := y
+CONFIG_WLAN_AKM_SUITE_OWE := n
 
 # Flag to enable Legacy Fast Roaming(LFR) Make Before Break
 CONFIG_PRIMA_WLAN_LFR_MBB := y
@@ -59,9 +59,6 @@ CONFIG_WLAN_FEATURE_HOLD_RX_WAKELOCK := n
 
 # Flag to enable AP Find feature
 CONFIG_WLAN_FEATURE_AP_FIND := y
-
-#Flag to enable hold RX wake lock feature
-CONFIG_WLAN_FEATURE_HOLD_RX_WAKELOCK := n
 
 # Flag to enable feature Software AP Authentication Offload
 SAP_AUTH_OFFLOAD := y
