s2: enable LZ4 and update defconfig

--- a/arch/arm64/configs/lineage_s2_defconfig
+++ b/arch/arm64/configs/lineage_s2_defconfig
@@ -3348,7 +3348,6 @@ CONFIG_STAGING=y
 #
 # Android
 #
-CONFIG_ANDROID=y
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
 # CONFIG_ANDROID_TIMED_GPIO is not set
@@ -3500,8 +3499,10 @@ CONFIG_MOBICORE_API=y
 #
 # Android
 #
+CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+# CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 CONFIG_CORESIGHT=y
 CONFIG_CORESIGHT_EVENT=y
 CONFIG_HAVE_CORESIGHT_SINK=y
@@ -3605,6 +3606,10 @@ CONFIG_MEM_SHARE_QMI_SERVICE=y
 #
 # CONFIG_FIRMWARE_MEMMAP is not set
 CONFIG_MSM_TZ_LOG=y
+
+#
+# Android
+#
 
 #
 # Firmware Drivers
@@ -4047,6 +4052,8 @@ CONFIG_CRYPTO_TWOFISH_COMMON=y
 CONFIG_CRYPTO_DEFLATE=y
 # CONFIG_CRYPTO_ZLIB is not set
 CONFIG_CRYPTO_LZO=y
+CONFIG_CRYPTO_LZ4=y
+# CONFIG_CRYPTO_LZ4HC is not set
 
 #
 # Random Number Generation
@@ -4105,6 +4112,8 @@ CONFIG_ZLIB_INFLATE=y
 CONFIG_ZLIB_DEFLATE=y
 CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
+CONFIG_LZ4_COMPRESS=y
+CONFIG_LZ4_DECOMPRESS=y
 # CONFIG_XZ_DEC is not set
 # CONFIG_XZ_DEC_BCJ is not set
 CONFIG_DECOMPRESS_GZIP=y
