--- a/arch/arm64/configs/lineage_s2_defconfig
+++ b/arch/arm64/configs/lineage_s2_defconfig
@@ -386,7 +386,7 @@ CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_USE_USER_ACCESSIBLE_TIMERS is not set
 CONFIG_BALANCE_ANON_FILE_RECLAIM=y
 CONFIG_GENERIC_EARLY_IOREMAP=y
-CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
+CONFIG_KSWAPD_CPU_AFFINITY_MASK="f"
 # CONFIG_FORCE_SKB_ALLOC_FROM_DMA_ZONE is not set
 # CONFIG_FORCE_KMALLOC_FROM_DMA_ZONE is not set
 # CONFIG_PROCESS_RECLAIM is not set
@@ -3378,10 +3378,10 @@ CONFIG_NET_VENDOR_SILICOM=y
 #
 # CONFIG_PRIMA_WLAN is not set
 CONFIG_PRONTO_WLAN=y
-# CONFIG_PRIMA_WLAN_BTAMP is not set
+CONFIG_PRIMA_WLAN_BTAMP=y
 CONFIG_PRIMA_WLAN_LFR=y
 CONFIG_PRIMA_WLAN_OKC=y
-# CONFIG_PRIMA_WLAN_11AC_HIGH_TP is not set
+CONFIG_PRIMA_WLAN_11AC_HIGH_TP=y
 CONFIG_WLAN_FEATURE_11W=y
 CONFIG_QCOM_VOWIFI_11R=y
 CONFIG_ENABLE_LINUX_REG=y
