--- a/arch/arm64/configs/lineage_s2_defconfig
+++ b/arch/arm64/configs/lineage_s2_defconfig
@@ -3502,7 +3502,9 @@ CONFIG_MOBICORE_API=y
 #
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_BINDERFS=y
 CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
+# CONFIG_BINDER_SHUT_UP is not set
 # CONFIG_ANDROID_BINDER_IPC_SELFTEST is not set
 CONFIG_CORESIGHT=y
 CONFIG_CORESIGHT_EVENT=y
@@ -3912,6 +3914,7 @@ CONFIG_LOG_BUF_MAGIC=y
 # CONFIG_SAMPLES is not set
 CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_KGDB is not set
+# CONFIG_DEBUG_REFCOUNT is not set
 # CONFIG_TEST_STRING_HELPERS is not set
 # CONFIG_TEST_KSTRTOX is not set
 # CONFIG_STRICT_DEVMEM is not set
